CICD/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-container
          image: sudarshan1994/springbootaapp1:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: app-storage
              mountPath: /app/data
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: springboot-pvc
