CICD/k8s/loadbalancer-staticip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
